[project]
name = "driving-turn-sequence-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "googlemaps>=4.10.0",
    "osmnx>=2.0.1",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.39",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
