[project]
name = "turn_sequence"
version = "0.1.0"
description = "Analyze the patterns in consecutive turns given by driving instructions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "googlemaps>=4.10.0",
    "osmnx>=2.0.1",
    "pygsheets>=2.0.6",
    "pylint>=3.3.6",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
